--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 
 
 body{
-  font-family: 'DM Sans', sans-serif !important;
+  font-family: 'Roboto', sans-serif !important;
   background-color: white;
   font-weight: 500;
 }
@@ -91,4 +91,33 @@ main {
   color:'black';
   font-size: 18px;
   font-weight: bold;
+}
+
+/* stepper */
+.completed {
+  background-color: green !important;
+}
+
+.swiper{
+  width: 100% !important;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  max-height: 600px !important;
+}
+
+.swiper-slide{
+  background-position: center;
+  background-size: cover;
+  width: 350px !important;
+  height: 450px !important;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 450px;
+}
+
+.page-item{
+  list-style: none;
 }
