--- a/frontend/src/components/Loader/loader.module.css
+++ b/frontend/src/components/Loader/loader.module.css
@@ -7,7 +7,7 @@
   .spinner > div {
     width: 18px;
     height: 18px;
-    background-color: #1A94FF;
+    background-color: black;
   
     border-radius: 100%;
     display: inline-block;
